syntax="proto3";
package pb;
option go_package = "internal/pb";

message blank {}

// 1, 2 e 3 Ã© apenas a ordem
message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryResponse {
    Category category = 1;
}

message CategoryList {
    repeated Category categories = 1;
}

message CategoryGetRequest {
    string id = 1;
}

service CategoryService {
    rpc Create(CreateCategoryRequest) returns (Category) {}
    rpc List(blank) returns (CategoryList) {}
    rpc Get(CategoryGetRequest) returns (Category) {}
}